Skip CI if draft PR (#8979)
* Skip running CI if draft PR

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix conditions

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix conditions

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Skip flavors

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Skip more jobs

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Remove unused workflow_dispatch

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix master.yml

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Remove useless condition

Signed-off-by: harupy <hkawamura0130@gmail.com>

---------

Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -36,7 +36,7 @@ jobs:
   examples:
     runs-on: ubuntu-latest
     timeout-minutes: 120
-    if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow'
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.repository == 'mlflow/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v3
         with:
@@ -86,7 +86,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     timeout-minutes: 120
-    if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow'
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.repository == 'mlflow/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v3
         with:
