Remove T203 rule and add inline print ignore
Signed-off-by: Nurseit Kamchyev <bncer.ml@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,4 @@ exclude = [
   "tests/protos",
 ]
 [tool.ruff.per-file-ignores]
-"dev/*" = ["T201", "T203"]
-"tests/resources/example_project/greeter.py" = ["T201", "T203"]
-"tests/resources/mlflow-test-plugin/mlflow_test_plugin/fake_deployment_plugin.py" = ["T201", "T203"]
+"dev/*" = ["T201"]
