--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ select = [
   "UP015",
   "UP031",
   "UP034",
+  "T20",
 ]
 force-exclude = true
 ignore = [
@@ -70,3 +71,5 @@ exclude = [
   "mlflow/temporary_db_migrations_for_pre_1_users",
   "tests/protos",
 ]
+[tool.ruff.per-file-ignores]
+"dev/*" = ["T201"]
