--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -509,6 +509,10 @@ transformers:
           "librosa", # required for transformers audio pipelines for bitrate conversion
           "ffmpeg", # required for transformers audio pipelines for audio byte to numpy conversion
         ]
+      # tensorflow 2.13.0 made all Keras private functions inaccessible. transformers versions
+      # prior to 4.30.0 are incompatible with this breaking change in Keras.
+      # See: https://github.com/huggingface/transformers/issues/23352 for discussion
+      "< 4.30.0": ["tensorflow<2.13.0"]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
   autologging:
