activated Ruff rule: PT001
Signed-off-by: Edoardo Abati <29585319+EdAbati@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,15 @@ select = [
   "E",
   "F",
   "C4",
+  "PT001",
+  # "PT006",
+  # "PT007",
+  # "PT009",
+  # "PT010",
+  # "PT012",
+  # "PT018",
+  # "PT023",
+  # "PT026",
   "UP004",
   "UP008",
   "UP011",
@@ -73,3 +82,6 @@ exclude = [
 ]
 [tool.ruff.per-file-ignores]
 "dev/*" = ["T201"]
+[tool.ruff.flake8-pytest-style]
+mark-parentheses = false
+fixture-parentheses = false
