--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -109,6 +109,7 @@ jobs:
         run: |
           ruff --fix .
           black .
+          blacken-docs $(git ls-files '*.py' '*.rst' '*.md')
       # ************************************************************************
       # js
       # ************************************************************************
