Add `make view` to quickly view documentation (#9103)
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -78,6 +78,11 @@ rsthtml: gateway-api-docs
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+	@echo "Use 'make view' to preview docs."
+
+.PHONY: view
+view:
+	python -m http.server --directory build/html
 
 .PHONY: html
 html: rdocs rsthtml javadocs
