try moving pip install to master.yml
Signed-off-by: Ann Zhang <ann.zhang@databricks.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -276,6 +276,7 @@ jobs:
         run: |
           source ./dev/install-common-deps.sh
           pip install pyspark "numpy<1.24.0"
+          pip install transformers
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
