--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,30 +38,7 @@ ignore = [
   "F403",  # undefined-local-with-import-star
   "F811",  # redefined-while-unused
 ]
-exclude = [
-  # Exclude a variety of commonly ignored directories.
-  ".bzr",
-  ".direnv",
-  ".eggs",
-  ".git",
-  ".git-rewrite",
-  ".hg",
-  ".mypy_cache",
-  ".nox",
-  ".pants.d",
-  ".pytype",
-  ".ruff_cache",
-  ".svn",
-  ".tox",
-  ".venv",
-  "__pypackages__",
-  "_build",
-  "buck-out",
-  "build",
-  "dist",
-  "node_modules",
-  "venv",
-  # Files/directories in mlflow repository
+extend-exclude = [
   "setup.py",
   "docs",
   "examples",
@@ -72,5 +49,6 @@ exclude = [
   "mlflow/temporary_db_migrations_for_pre_1_users",
   "tests/protos",
 ]
+
 [tool.ruff.per-file-ignores]
 "dev/*" = ["T201"]
