Set subdirectory when installing langchain from repository
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -559,7 +559,7 @@ langchain:
   package_info:
     pip_release: "langchain"
     install_dev: |
-      pip install git+https://github.com/hwchase17/langchain
+      pip install git+https://github.com/hwchase17/langchain#subdirectory=libs/langchain
   models:
     minimum: "0.0.169"
     maximum: "0.0.232"
