--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -49,6 +49,7 @@ jobs:
   core:
     runs-on: ubuntu-latest
     timeout-minutes: 120
+    if: (github.event_name == 'schedule' && github.repository == 'mlflow-automation/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v3
         with:
