--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -151,6 +151,7 @@ jobs:
               tests/store/tracking/test_sqlalchemy_store.py \
               tests/store/model_registry/test_sqlalchemy_store.py \
               tests/db
+            ./tests/db/compose.sh down --volumes --remove-orphans
           done
 
           test $err = 0
