--- a/tests/db/Dockerfile.psycopg3
+++ b/tests/db/Dockerfile.psycopg3
@@ -2,6 +2,6 @@ FROM python:3.8
 
 ARG DEPENDENCIES
 
-RUN pip install psycopg[binary] pymysql mysqlclient pytest pytest-cov
+RUN pip install psycopg[binary] pytest pytest-cov
 RUN echo "${DEPENDENCIES}" > /tmp/requriements.txt && pip install -r /tmp/requriements.txt
 RUN pip list
