--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -276,9 +276,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-          pip install pyspark "numpy<1.24.0"
-          pip install torch
-          pip install transformers
+          pip install pyspark "numpy<1.24.0" torch transformers
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
