--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: |
             pip --version
             pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[gateway]
+            pip install tqdm
       - run:
           name: Build documentation
           working_directory: docs
@@ -68,7 +69,7 @@ jobs:
           name: Install dependencies
           command: |
             pip install -e .
-            pip install nbconvert ipykernel
+            pip install nbconvert ipykernel tqdm ipywidgets
       - run:
           name: Run CLI
           working_directory: examples/recipes/regression
