--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,9 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
-            pip --version
+            pip --version 
             pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[gateway]
-            pip install tqdm
+            pip install tqdm ipywidgets
       - run:
           name: Build documentation
           working_directory: docs
