--- a/mlflow/server/auth/basic_auth.ini
+++ b/mlflow/server/auth/basic_auth.ini
@@ -1,6 +1,6 @@
 [mlflow]
 default_permission = READ
-database_uri = sqlite:////tmp/basic_auth.db
+database_uri = sqlite:///basic_auth.db
 admin_username = admin
 admin_password = password
 authorization_function = mlflow.server.auth:authenticate_request_basic_auth
