--- a/tests/server/auth/fixtures/jwt_auth.ini
+++ b/tests/server/auth/fixtures/jwt_auth.ini
@@ -1,6 +1,6 @@
 [mlflow]
 default_permission = READ
-database_uri = sqlite:////tmp/basic_auth.db
+database_uri = sqlite:///basic_auth.db
 admin_username = admin
 admin_password = password
 authorization_function = tests.server.auth.jwt_auth:authenticate_request
