--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -521,7 +521,9 @@ transformers:
       # See: https://github.com/huggingface/transformers/issues/23352 for discussion
       "< 4.30.0": ["tensorflow<2.13.0"]
     run: |
-      pytest tests/transformers/test_transformers_model_export.py
+      pytest tests/transformers/test_transformers_model_export.py --ignore=tests/transformers/test_transformers_model_export.py::test_transformers_pt_model_save_dependencies_without_accelerate
+      pip uninstall accelerate
+      pytest tests/transformers/test_transformers_model_export.py::test_transformers_pt_model_save_dependencies_without_accelerate
   autologging:
     minimum: "4.25.1"
     maximum: "4.31.0"
