--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -522,7 +522,7 @@ transformers:
       "< 4.30.0": ["tensorflow<2.13.0"]
     run: |
       pytest tests/transformers/test_transformers_model_export.py --ignore=tests/transformers/test_transformers_model_export.py::test_transformers_pt_model_save_dependencies_without_accelerate
-      pip uninstall accelerate
+      pip uninstall -y accelerate
       pytest tests/transformers/test_transformers_model_export.py::test_transformers_pt_model_save_dependencies_without_accelerate
   autologging:
     minimum: "4.25.1"
