--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -523,7 +523,7 @@ transformers:
     run: |
       pytest tests/transformers/test_transformers_model_export.py
       pip uninstall -y accelerate
-      pytest tests/transformers/test_transformers_model_export.py::test_transformers_pt_model_save_dependencies_without_accelerate
+      pytest tests/transformers/test_transformers_model_export.py -k "test_transformers_tf_model_save_without_conda_env_uses_default_env_with_expected_dependencies or test_transformers_pt_model_save_dependencies_without_accelerate"
   autologging:
     minimum: "4.25.1"
     maximum: "4.31.0"
