Cache `.venv` directory instead of caching pip cache (#9208)
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -5,9 +5,9 @@ inputs:
     description: "The python version to install. If unspecified, install the minimum python version mlflow supports."
     required: false
 outputs:
-  installed-python-version:
+  python-version:
     description: "The installed python version"
-    value: ${{ steps.fetch-python-version.outputs.version }}
+    value: ${{ steps.get-python-version.outputs.version }}
 runs:
   using: "composite"
   steps:
