Add note on how requirement YAML files are updated
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/requirements/gateway-requirements.yaml
+++ b/requirements/gateway-requirements.yaml
@@ -1,5 +1,7 @@
 # These are the extra requirements for MLflow Gateway, which can be installed
 # on top of the core requirements using `pip install mlflow[gateway]`.
+# When we release a new major/minor version, this file is automatically updated
+# as a part of the release process.
 
 pydantic:
   pip_release: pydantic
