--- a/requirements/core-requirements.yaml
+++ b/requirements/core-requirements.yaml
@@ -1,7 +1,8 @@
 # These are the core requirements for the complete MLflow platform, which augments
 # the skinny client functionality with support for running the MLflow Tracking
 # Server & UI. It also adds project backends such as Docker and Kubernetes among
-# other capabilities.
+# other capabilities. When we release a new major/minor version, this file is
+# automatically updated as a part of the release process.
 
 alembic:
   pip_release: alembic
