--- a/.github/actions/cache-pip/action.yml
+++ b/.github/actions/cache-pip/action.yml
@@ -1,20 +1,15 @@
-name: "cache-pip"
-description: "Cache pip dependencies"
+name: "cache-venv"
+description: "Cache .venv directory for faster dependency installation"
 runs:
   using: "composite"
   steps:
-    - name: Get cache key prefix
-      id: get-cache-key-prefix
-      shell: bash
-      run: |
-        echo "prefix=$ImageOS-$ImageVersion" >> $GITHUB_OUTPUT
+    - uses: ./.github/actions/py-cache-key
+      id: py-cache-key
     - uses: actions/cache@v3
       continue-on-error: true
       # https://github.com/actions/cache/issues/810
       env:
-        SEGMENT_DOWNLOAD_TIMEOUT_MINS: 5
+        SEGMENT_DOWNLOAD_TIMEOUT_MINS: 1
       with:
-        path: ~/.cache/pip
-        key: ${{ steps.get-cache-key-prefix.outputs.prefix }}-pip-${{ hashFiles('requirements/*-requirements.txt') }}
-        restore-keys: |
-          ${{ steps.get-cache-key-prefix.outputs.prefix }}-pip-
+        path: ~/.venv
+        key: ${{ steps.py-cache-key.outputs.key }}
