Upgrade ruff to 0.0.284
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ select = [
 ]
 force-exclude = true
 ignore = [
+  "E721",  # type-comparison
   "E402",  # module-import-not-at-top-of-file
   "E501",  # line-too-long
   "E741",  # ambiguous-variable-name
