--- a/.github/ISSUE_TEMPLATE/good_first_issue.yaml
+++ b/.github/ISSUE_TEMPLATE/good_first_issue.yaml
@@ -12,8 +12,9 @@ body:
         A summary of the issue.
   - type: markdown
     attributes:
-      label: Notes
       value: |
+        ## Notes
+
         - Make sure to open a PR from a **non-master** branch.
         - Sign off the commit using the `-s` flag when making a commit:
 
