cleanup the dockerfile
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/examples/docker/Dockerfile
+++ b/examples/docker/Dockerfile
@@ -1,12 +1,6 @@
 FROM python:3.8
 
-RUN pip install mlflow \
-    && pip install azure-storage-blob \
-    && pip install numpy \
-    && pip install scipy \
-    && pip install pandas \
-    && pip install scikit-learn \
-    && pip install cloudpickle
+RUN pip install mlflow azure-storage-blob numpy scipy pandas scikit-learn cloudpickle
 
-COPY train.py train.py
-COPY wine-quality.csv wine-quality.csv
+COPY train.py .
+COPY wine-quality.csv .
