--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ select = [
   "UP032",
   "UP034",
   "T20",
+  "TID252",
 ]
 force-exclude = true
 ignore = [
@@ -68,3 +69,6 @@ extend-exclude = [
 [tool.ruff.flake8-pytest-style]
 mark-parentheses = false
 fixture-parentheses = false
+
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
