--- a/.github/workflows/release-note-category.yml
+++ b/.github/workflows/release-note-category.yml
@@ -10,6 +10,7 @@ on:
       - reopened
       - labeled
       - unlabeled
+      - closed
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.head_ref || github.ref }}
@@ -20,7 +21,7 @@ defaults:
     shell: bash --noprofile --norc -exo pipefail {0}
 
 jobs:
-  validate:
+  job:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -28,13 +29,22 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Validate
+      - name: validate-labeled
         uses: actions/github-script@v6
+        if: ${{ github.event.action != 'closed' }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             // https://github.com/actions/github-script#run-a-separate-file
-            const script = require(
-              `${process.env.GITHUB_WORKSPACE}/.github/workflows/release-note-category.js`
-            );
-            script({ core, context, github });
+            const script = require("./.github/workflows/release-note-category.js");
+            await script({ core, context, github });
+
+      - name: post-merge
+        uses: actions/github-script@v6
+        if: ${{ github.event.action == 'closed' && github.event.pull_request.merged == true }}
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // https://github.com/actions/github-script#run-a-separate-file
+            const script = require("./.github/workflows/release-note-category.js");
+            await script.postMerge({ core, context, github });
