--- a/.github/ISSUE_TEMPLATE/good_first_issue.yaml
+++ b/.github/ISSUE_TEMPLATE/good_first_issue.yaml
@@ -10,17 +10,16 @@ body:
       label: Summary
       description: |
         A summary of the issue.
-  - type: markdown
+  - type: textarea
     attributes:
+      label: Notes
       value: |
-        ## Notes
-
         - Make sure to open a PR from a **non-master** branch.
         - Sign off the commit using the `-s` flag when making a commit:
 
           ```sh
-          git commit -s -m "<message>"
-                   # ^^ make sure to add this
+          git commit -s -m "..."
+                   # ^^ make sure to use this
           ```
 
-        - Include `#<id_of_this_issue>` in the PR description when opening a PR.
+        - Include `#{issue_number}` (e.g. `#123`) in the PR description when opening a PR.
